<resources>
    <string name="app_name">HurryLetsGo</string>
    <string name="find_drinks">Drinks</string>
    <string name="find_entertainment">Entertainment</string>
    <string name="find_food">Food</string>
    <string name="saved_places">Shared Places</string>
    <string name="greeting">Hurry Lets Go</string>
    <string name="greetingDrinks">Find Drinks Activity</string>
    <string name="greetingFood">Find Food Activity</string>
    <string name="greetingEntertainment">Find Entertainment Activity</string>
    <string name="greetingSavedPlaces">Shared Places Activity</string>
    <string name="greetingPlaceList">Place List Activity</string>
    <string name="addMember">Add Member</string>
    <string name="greetingSubText">an app to help people with no time find something to do right now</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
